force-app/main/default/objects/Leave_Request__c/fields/Cancelled_By_Professor__c.field-meta.xml
<CustomField>
    <fullName>Cancelled_By_Professor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cancelled By Professor Before Approval</label>
    <type>Checkbox</type>
</CustomField>