force-app/main/default/objects/Leave_Request__c/fields/HCM_Leave_Record_ID__c.field-meta.xml
<CustomField>
    <fullName>HCM_Leave_Record_ID__c</fullName>
    <label>HCM Leave Record ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>