force-app/main/default/objects/Leave_Request__c/fields/Leave_Request_Status__c.field-meta.xml
<CustomField>
    <fullName>Leave_Request_Status__c</fullName>
    <label>Leave Request Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Approved by Professors</fullName>
            </value>
            <value>
                <fullName>Approved by Manager</fullName>
            </value>
            <value>
                <fullName>Rejected by Professor</fullName>
            </value>
            <value>
                <fullName>Rejected by Manager</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>