force-app/main/default/objects/Leave_Request__c/fields/Leave_Type__c.field-meta.xml
<CustomField>
    <fullName>Leave_Type__c</fullName>
    <label>Leave Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>