force-app/main/default/objects/Leave_Request__c/fields/Reporting_Manager__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Manager__c</fullName>
    <formula>Manager__r.FirstName +&apos; &apos;+  Manager__r.LastName</formula>
    <label>Reporting Manager</label>
    <type>Text</type>
</CustomField>