force-app/main/default/objects/Leave_Request__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Leave_Request_Status__c</columns>
    <columns>Cancelled_By_Professor__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>Manager__c</columns>
    <columns>Reporting_Manager__c</columns>
    <columns>From_Date__c</columns>
    <columns>To_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>